Aumentei o espaço do cabeçalho e a mensagem na seção azul da tela home com #container-de-descricao {padding: 30px 0px;}

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -22,6 +22,7 @@ input {
 }
 
 button:focus {
+    display: block;
     color: white;
 }
 
@@ -69,6 +70,7 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    padding: 30px 0px;
 }
 
 #container-de-descricao>ol {
