--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -97,10 +97,12 @@ div img {
 div:nth-child(2),
 div:last-child {
     text-align: center;
+    
 }
 
 table {
     width: 60%;
+    margin: auto auto ;
     
     
 }
@@ -112,6 +114,7 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+    
 }
 
 .container-do-search {
@@ -128,8 +131,16 @@ td button {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+    
 }
 
 #back-button:hover {
     background-color: #635a3d
+}
+.icone{
+    width: 25px;
+    height: 25px;
+}
+.back{
+    margin: auto auto ;
 }
