o icone com a lupa ja estava no lugar, coloquei background-color: transparent; e todos os icones ficaram arrumados

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -140,6 +140,7 @@ td button {
 .icone{
     width: 25px;
     height: 25px;
+    background-color: transparent;
 }
 .back{
     margin: auto auto ;
