cor do texto do botão comprar muda para branco com onclik e cor de fundo fica mais escuro quando o passa o mouse com hover na pagina comprar.html

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -145,3 +145,9 @@ td button {
 .back{
     margin: auto auto ;
 }
+.comprar:hover{
+    background-color: #635a3d
+}
+.comprar:onclick{
+ color: white;
+}
