--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -151,3 +151,10 @@ td button {
 .comprar:onclick{
  color: white;
 }
+
+input{
+    border-bottom: 2px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
