--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -1,9 +1,10 @@
-/** 
+/**
   *
   *  ESTILOS GERAIS 
   *
   **/
-
+  @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+  font-family: 'Roboto', sans-serif;
 * {
     margin: 0;
     padding: 0;
@@ -153,7 +154,7 @@ td button {
 }
 
 input{
-    border-bottom: 2px solid black;
+    border-bottom: px solid black;
     border-top: none;
     border-left: none;
     border-right: none;
