--- a/semana2/aula7-reponsividade/index.css
+++ b/semana2/aula7-reponsividade/index.css
@@ -11,6 +11,12 @@ div {
 #main-container{
     display: flex;
     flex-wrap:wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+    
 }
 
 #first-block {
@@ -21,44 +27,81 @@ div {
 
 .blue-block {
     background-color: blue;
-    width: 33vw;
+    width: 31vw;
     height: 20vw;
+    margin: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+       
 }
 
 .yellow-block {
     background-color: yellow;
-    width: 33vw;
+    width: 31vw;
     height: 20vw;
+    margin: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .green-block {
     background-color: green;
-    width: 33vw;
+    width: 31vw;
     height: 20vw;
-}
-#black-block-container {
+    margin: 0.5rem;
     display: flex;
-    width: 100vw;
-    height: 10vh;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    
- }
+    align-items: center;
+    justify-content: center;
+}
+   
+ 
 .black-block {
     background-color: black;
     color: white;
-    width: 50%;
-    height: 20vw; 
-}
-#white-block-container {
-    width: 100vw;
+    width: 47vw;
+    height: 20vw;
+    margin: 0.5rem; 
     display: flex;
-    flex-wrap:wrap;
-    
- }
+    align-items: center;
+    justify-content: center;
+}
 
 .white-block {
     background-color: white;
-    width: 32vw;
+    width: 31vw;
     height: 20vw;
+    margin: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+@media screen and (min-width: 320px) and (max-width: 812px) {
+    .blue-block {
+        width: 100vw;
+    }
+    .yellow-block {
+        background-color: yellow;
+        width: 100vw;
+        
+    }
+    
+    .green-block {
+        background-color: green;
+        width: 100vw;
+    }
+       
+     
+    .black-block {
+        background-color: black;
+        color: white;
+        width: 100vw;
+    }
+    
+    .white-block {
+        background-color: white;
+        width: 100vw;
+    }
